syntax = "proto3";

package proto;

message PeerMessage{
	string to = 1;
	int64 time = 2;//message send time
	string from = 3;//who send
	bytes data  = 4;//message data	
	int32 status = 5;//if the message is first reply
	string sn = 6;//the message sn
}

message SendPeerMessageReq{
	PeerMessage msg = 1;
}

message SendPeerMessageRes{
	string cid = 1;
	int32 status = 2;
	string sn = 3;
}

message GetPeerMessageReq{
	string cid = 1;
}

message GetPeerMessageRes{
	repeated PeerPacket msgs = 1;
}

message RecvPeerMessage{
	string cid = 1;
	repeated int64 id = 2;//recv message id
}

message PeerPacket{
	int32 packet_type = 1;
	int64 id = 2; //set by server
	bytes data = 3;
}